# QR_packaging_scanner

./: .editorconfig  .gitignore  QR_Scanner.spec  README.md  docker-compose.yaml  main.py  pyproject.toml  scanner.spec
hooks/: hook-cv2.py
requirements/: base.txt
scripts/: check_imports.py
src/camera/: capture.py
src/messaging/: broker.py
src/scanner/: calibrator.py  detector.py
src/scanner/models/: __init__.py  barcode_detection.py  camera_config.py  scan_stats.py
src/services/: deduplication.py
src/ui/: __init__.py  overlay.py
