[project]
name = "QR-packaging-scanner"
version = "0.1.0"
description = "Сервис распознавания честного знака и размещения в упаковке"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Victor N Pisarev", email = "victor.n.pisarev@gmail.com"}
]

dependencies = [
    "opencv-python>=4.8.0",
    "pyzbar>=0.1.9",
    "pika>=1.3.2",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "ipython>=8.14.0",
    "ipdb>=0.13.13",
]

# ============================================
# Инструменты разработки
# ============================================

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**" = ["S101"]      # use of assert

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

# Не ругаться на отсутствие stubs для наших модулей
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Важно: не проверять импорт наших же модулей как нетипизированные
explicit_package_bases = true

# Игнорировать предупреждения для внешних библиотек без stubs
[[tool.mypy.overrides]]
module = [
    "cv2",
    "cv2.*",
    "numpy",
    "numpy.*",
    "pika",
    "pika.*",
]
ignore_missing_imports = true

# Наши модули считаем типизированными
[[tool.mypy.overrides]]
module = "src.*"
ignore_missing_imports = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: медленные тесты",
    "integration: интеграционные тесты",
    "unit: модульные тесты",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
